Fixed colour contrast for button

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ h3{
 
 .card .button {
 	border: none;
+	color: #A349E4;
 	background-color: white;
 	padding: 8px ;
 	text-decoration: none;
